# dbtricks

./: CMakeLists.txt  README.md  all_types.snippet.h  base.c  base.h  commity.snippet.h  db_domany.snippet.h  domany.snippet.h  test.m4  types.snippet.h
cmake/: all_types.cmake  m4stuff.cmake  restartable_transaction.cmake
db/: all_types.cmake  all_types.csv  all_types.m4.h  all_types.sql  base.c  base.h  base.m4.c  base.m4.h  commity.snippet.h  domany.snippet.h  restartable_transaction.c  restartable_transaction.cmake  restartable_transaction.cmake.c  restartable_transaction.cmake.h  restartable_transaction.h  restartable_transaction.m4.c  selins.h  selins_perform.snippet.c  transaction.c  transaction.h  transaction.struct.h  types.m4.h  types.snippet.h
example/: main.c  restartable.c  transactions.c
examples/: transactions.c
m4/: c.m4
